--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <div class="heading">
             <h1>Drowsiness Detection</h1>
         </div>
-        <div class="imageframe">
+        <div class="drowsy">
             <img src="{{ url_for('video_feed') }}" id="bg">
         </div>
     </div>
